--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="absolute -bottom-20 -left-20 w-56 h-56 bg-rose-400/8 rounded-full blur-[80px] pointer-events-none"></div>
 
           <div class="relative">
-            <p class="text-neutral-300 text-base md:text-lg leading-relaxed text-center">
+            <p class="text-neutral-300 text-base md:text-lg leading-relaxed text-justify" style="text-align-last: center;">
               Buah beri adalah kelompok buah yang umumnya berukuran kecil hingga sedang, memiliki warna cerah seperti merah, biru, ungu, atau hitam, serta rasa yang bervariasi dari manis hingga asam. Buah-buahan ini dikenal luas karena kandungan nutrisinya yang tinggi, terutama antioksidan, vitamin, dan serat. Dalam dunia kesehatan, buah beri sering disebut sebagai <span class="text-white font-semibold">superfood</span> karena kemampuannya membantu melindungi tubuh dari kerusakan sel akibat radikal bebas, sekaligus mendukung berbagai fungsi penting tubuh seperti kesehatan jantung, otak, dan sistem imun.
             </p>
 
@@ -1016,7 +1016,7 @@
         <!-- Quiz Result -->
         <div id="quiz-result" class="hidden max-w-3xl mx-auto">
           <div class="quiz-result-card text-center">
-            <div id="result-icon" class="mx-auto mb-6"></div>
+            <div id="result-icon" class="flex justify-center mb-6"></div>
             <h3 class="text-3xl font-display font-bold mb-2">Kuis Selesai!</h3>
             <p id="result-text" class="text-neutral-400 mb-4"></p>
             <div class="text-6xl font-bold mb-6">
@@ -1172,7 +1172,7 @@
           </div>
           <span class="font-bold">Berry<span class="text-red-400">Pedia</span></span>
         </div>
-        <p class="text-xs sm:text-sm text-neutral-500 text-center">Website Edukasi Interaktif &mdash; Tugas Praktik Informatika 2025</p>
+        <p class="text-xs sm:text-sm text-neutral-500 text-center">Website Edukasi Interaktif &mdash; Tugas Praktik Informatika 2026</p>
         <a href="#hero" class="p-2 rounded-lg border border-white/10 hover:bg-white/5 transition-colors" aria-label="Kembali ke Atas">
           <i data-lucide="arrow-up" class="w-5 h-5 text-neutral-500 hover:text-white transition-colors"></i>
         </a>
